# monkey_letter

./: .env  Cargo.toml  Dockerfile  MakeFile  ReadMe.md  configuration.yaml  spec.yaml
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240623203621_make_status_not_null_in_subscriptions.sql  20240623204221_create_subscription_tokes_table.sql  20240624210731_change_subscription_token_column_name.sql  20240626012340_create_users_table.sql  20240629024346_seed_user.sql  20240630191254_create_newsletter_issues_table.sql  20240630193636_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  idempotency.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helper.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
