[package]
name = "monkey_letter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "monkey_letter"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
actix-web = "4"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = {version="0.14.0", default-features=false, features=["yaml"]}
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
sqlx = {version="0.7", default_features = false, features =["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
serde-aux = "4.5.0"
unicode-segmentation = "1.11.0"
validator = "0.18.1"

[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
once_cell = "1.19.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
reqwest = "0.12.5"
